--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         </div>
       </label>
     </div>
+    
+  <div class="startBar">
+    <button class="startBtn">START</button>
+    <i class="fa-solid fa-rotate-right"></i>
+  </div>
+
     <div class="container">
       <div class="card input-wrapper">
         <div class="from">
@@ -39,7 +45,7 @@
           <div class="dropdown-container" id="input-language">
             <div class="dropdown-toggle">
               <ion-icon name="globe-outline"></ion-icon>
-              <span class="selected" data-value="auto">English</span>
+              <span class="selected" data-value="auto">Auto Detect (English)</span>
               <ion-icon name="chevron-down-outline"></ion-icon>
             </div>
             <ul class="dropdown-menu">
@@ -84,7 +90,7 @@
           <div class="dropdown-container" id="output-language">
             <div class="dropdown-toggle">
               <ion-icon name="globe-outline"></ion-icon>
-              <span class="selected" data-value="en">Hindi</span>
+              <span class="selected" data-value="hi">Hindi</span>
               <ion-icon name="chevron-down-outline"></ion-icon>
             </div>
             <ul class="dropdown-menu">
