--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Language Translater</title>
   </head>
   <body>
-    <div class="mode">
+    <!-- <div class="mode">
       <label class="toggle" for="dark-mode-btn">
         <div class="toggle-track">
           <input type="checkbox" class="toggle-checkbox" id="dark-mode-btn" />
@@ -31,7 +31,7 @@
           <img src="images/moon.png" alt="" />
         </div>
       </label>
-    </div>
+    </div> -->
     
   <div class="startBar">
     <button class="startBtn">START</button>
@@ -98,8 +98,7 @@
               <li class="option">DropDown Menu Item 2</li>
             </ul>
           </div>
-          <button class="speech-output" on
-          .click="speak()">
+          <button class="speech-output" onclick="speak()">
             <i class="fa-solid fa-volume-high"></i>
           </button>
         </div>
